scrollbar height fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@ body {
 
 ::-webkit-scrollbar {
 	width: 8px;
+	height: 8px;
 }
 
 ::-webkit-scrollbar-track {
